syntax = "proto3";

package calculator;
option go_package = "calculatorpb";

message SumRequest {
    int32 numberA = 1;
    int32 numberB = 2;
}

message SumResponse {
    int32 res = 1;
}

service Calculate {
    rpc Sum (SumRequest) returns (SumResponse) {
    };
}
